Mon Sep  7 21:31:28 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/Invocation.h:
        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.cpp:

          More clean up of debug messages, improve the detection of entry
          and exit from request waits.
        
Mon Sep  7 06:05:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/IFR_Service/IFR_Service.mpc:
          Removed support for mcpp again, mcpp has not been enabled

Mon Sep  7 06:00:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/logWalker/Invocation.cpp
        * utils/logWalker/Invocation.h
          Fixed problems with versioned namespace build

Fri Sep  4 02:34:00 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/Log.cpp:

          Removed verbose diagnostic debug statements.

Thu Sep  3 17:40:13 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/HostProcess.h:
        * utils/logWalker/HostProcess.cpp:
        * utils/logWalker/Invocation.h:
        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.h:
        * utils/logWalker/Log.cpp:
        * utils/logWalker/Session.cpp:

          General improvements to the tool. It is now able to handle log
          files generated with Exclusive TMS, GIOP 1.0 messages, and cases
          of cross-thread queue flushing. Also capture details about
          service contexts attached to requests and replies, and note when
          replies contain exceptions.

Thu Sep  3 10:44:26 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector_Impl.cpp:

          Removed extra reference count during make_svc_handler().
          This is also for Bug#3732.

Thu Sep  3 10:34:43 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector.cpp:

          Fixed reference counting for HTIOP connection handler.
          This is required for Bug#3732.
